--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Instant Survey</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJB14NVLK1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-HJB14NVLK1');
+  </script>
 </head>
 
 <body>
